@startuml
hide circle
skinparam linetype ortho
skinparam shadowing false

entity "SchoolYear" as SchoolYear {
  * schoolYearId : INT <<PK>>
  --
  year : VARCHAR
}

entity "SchoolYearProject" as SchoolYearProject {
  * schoolYearProjectId : INT <<PK>>
  --
  schoolYearId : INT <<FK>>
  projectId : INT <<FK>>
}

entity "StudentClass" as Class {
  * classId : INT <<PK>>
  --
  name : VARCHAR
  branch : VARCHAR
}

entity "Person" as Person {
  * id : VARCHAR <<PK>>
  --
  firstName : VARCHAR
  lastName  : VARCHAR
  personType : VARCHAR
}

entity "StudentClassHistory" as StudentClassHistory {
  * historyId : INT <<PK>>
  --
  studentId : VARCHAR <<FK>>
  classId : INT <<FK>>
  schoolYearId : INT <<FK>>
}

entity "Project" as Project {
  * projectId : INT <<PK>>
  --
  title : VARCHAR
  description : TEXT
  githubUrl : VARCHAR
  logoUrl : VARCHAR
  status : VARCHAR
  technology : VARCHAR
  projectType : VARCHAR
}

entity "ProjectStudent" as ProjectStudent {
  * projectStudentId : INT <<PK>>
  --
  projectId : INT <<FK>>
  historyId : INT <<FK>>
  role : VARCHAR
}

entity "ProjectSupervisor" as ProjectSupervisor {
  * projectSupervisorId : INT <<PK>>
  --
  projectId : INT <<FK>>
  professorId : VARCHAR <<FK>>
  role : VARCHAR
}

SchoolYear "1" -- "n" StudentClassHistory
Class      "1" -- "n" StudentClassHistory
Person     "1" -- "n" StudentClassHistory

Project "1" -- "n" SchoolYearProject
SchoolYear "1" -- "n" SchoolYearProject

Project              "1" -- "n" ProjectStudent
StudentClassHistory  "1" -- "n" ProjectStudent

Project    "1" -- "n" ProjectSupervisor
Person     "1" -- "n" ProjectSupervisor
@enduml